--- a/views/layouts/partials/head.ejs
+++ b/views/layouts/partials/head.ejs
@@ -6,5 +6,6 @@
         <%- title %> | CSE340 App
     </title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/inventory.css">
     <script src="/js/nav-toggle.js" defer></script>
 </head>
