--- a/views/layouts/partials/header.ejs
+++ b/views/layouts/partials/header.ejs
@@ -1,4 +1,4 @@
-<header id="main-nav">
+<header id="main-nav"> 
   <div class="nav-top">
     <span class="sitename">
       <a href="/">CSE Motors</a>
@@ -9,11 +9,5 @@
     <button id="nav-toggle" aria-label="Toggle Navigation">&#9776;</button>
   </div>
 
-  <ul id="nav-menu">
-    <li><a href="/">Home</a></li>
-    <li><a href="/custom">Custom</a></li>
-    <li><a href="/sedan">Sedan</a></li>
-    <li><a href="/suv">SUV</a></li>
-    <li><a href="/truck">Truck</a></li>
-  </ul>
+  <%- include('navigation') %>
 </header>
