--- a/views/inventory/add_classification.ejs
+++ b/views/inventory/add_classification.ejs
@@ -1,13 +1,26 @@
-<%- include("../layouts/partials/head") %>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <%- include('../layouts/partials/head') %>
+  <link rel="stylesheet" href="/css/forms.css" /> <!-- Include your forms.css -->
+</head>
 <body>
+  <%- include('../layouts/partials/header') %>
+
   <main>
     <h1>Add New Classification</h1>
-    <form action="/inventory/add-classification" method="post">
-      <label for="classification_name">Classification Name</label>
-      <input type="text" id="classification_name" name="classification_name" required maxlength="30">
-      <button type="submit">Add Classification</button>
-    </form>
+
+    <%- messages() %> <!-- Flash messages here -->
+
+    <div class="form-wrapper">
+      <form class="form-container" action="/inventory/add-classification" method="post">
+        <label for="classification_name">Classification Name</label>
+        <input type="text" id="classification_name" name="classification_name" required maxlength="30" />
+        <button type="submit">Add Classification</button>
+      </form>
+    </div>
   </main>
+
+  <%- include('../layouts/partials/footer') %>
 </body>
 </html>
