--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,13 +1,21 @@
-<%- include("../layouts/partials/head") %>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <%- include('../layouts/partials/head') %>
+  <link rel="stylesheet" href="/css/forms.css">
+</head>
 <body>
+  <%- include('../layouts/partials/header') %>
+
   <main>
     <h1>Inventory Management</h1>
     <p>Choose an option below:</p>
-    <ul>
+    <ul class=admin-links>
       <li><a href="/inventory/add-classification">Add New Classification</a></li>
       <li><a href="/inventory/add-inventory">Add New Vehicle</a></li>
     </ul>
   </main>
+
+  <%- include('../layouts/partials/footer') %>
 </body>
 </html>
