--- a/views/layouts/partials/head.ejs
+++ b/views/layouts/partials/head.ejs
@@ -7,5 +7,7 @@
     </title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/inventory.css">
+    <link rel="stylesheet" href="/css/forms.css">
+
     <script src="/js/nav-toggle.js" defer></script>
 </head>
