--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,14 @@
 <section class="admin-links">
   <h2>Admin Pages (for testing)</h2>
   <ul>
-    <li><a href="/inventory">Inventory Management</a></li>
-    <li><a href="/inventory/add-classification">Add Classification</a></li>
-    <li><a href="/inventory/add-inventory">Add Vehicle</a></li>
+    <li><a href="/admin/inventory">Inventory Management</a></li>
+    <li><a href="/admin/inventory/add-classification">Add Classification</a></li>
+    <li><a href="/admin/inventory/add">Add Vehicle</a></li>
   </ul>
 </section>
 
 <main class="home">
-  <h1>Welcome to CSE Motors!</h1>  <!-- Add this line -->
+  <h1>Welcome to CSE Motors!</h1>
 
   <h2>Own Your Dream Car Today!</h2>
   <%- messages() %>
