--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -14,6 +14,8 @@
     <ul>
       <li><a href="/admin/users">Manage Users</a></li>
       <li><a href="/admin/inventory">Manage Inventory</a></li>
+      <li><a href="/admin/inventory/add">Add Vehicle</a></li>
+      <li><a href="/admin/inventory/add-classification">Add Classification</a></li>
       <li><a href="/admin/orders">View Orders</a></li>
     </ul>
   </nav>
