--- a/views/layouts/partials/header.ejs
+++ b/views/layouts/partials/header.ejs
@@ -1,13 +1,13 @@
-<header id="main-nav"> 
+<header id="main-nav">
+  <!-- rest of your header content -->
   <div class="nav-top">
-    <span class="sitename">
-      <a href="/">CSE Motors</a>
-    </span>
-    <div id="tools">
-      <a href="/account/login" title="Click to log in">My Account</a>
-    </div>
+    <span class="sitename"><a href="/">CSE Motors</a></span>
+    <div id="tools"><a href="/account/login">My Account</a></div>
     <button id="nav-toggle" aria-label="Toggle Navigation">&#9776;</button>
   </div>
-
   <%- include('navigation') %>
+
+  <%/* if (useFormsCSS) { %>
+    <link rel="stylesheet" href="/css/forms.css" />
+  <% }*/ %>
 </header>
