--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -25,5 +25,7 @@
 
       <button type="submit">Login</button>
     </form>
+
+    <p>Don't have an account? <a href="/account/register">Register here</a></p>
   </div>
 </main>
