--- a/views/layouts/partials/head.ejs
+++ b/views/layouts/partials/head.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/inventory.css">
     <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/errors.css" />
 
     <script src="/js/nav-toggle.js" defer></script>
 </head>
