--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,18 +1,17 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <%- include('./partials/head') %> <!-- Head section with meta tags, etc. -->
+<!DOCTYPE html>
+<html lang="en">
+<%- include('./partials/head') %> <!-- Head section with meta tags, etc. -->
 
-    <body>
-    <div id="wrapper">
-        <%- include('./partials/header', { useFormsCSS: useFormsCSS }) %>
-        <main>
-        <%- body %>
-        <!-- debug output -->
-        </main>
-        <%- include('./partials/footer') %>
-    </div>
-        <script src="/js/nav-toggle.js"></script>
+<body class="<%= typeof bodyClass !== 'undefined' ? bodyClass : '' %>">
 
-    </body>
-
-    </html>
+  <div id="wrapper">
+    <%- include('./partials/header', { useFormsCSS: useFormsCSS }) %>
+    <main>
+      <%- body %>
+      <!-- debug output -->
+    </main>
+    <%- include('./partials/footer') %>
+  </div>
+  <script src="/js/nav-toggle.js"></script>
+</body>
+</html>
