--- a/views/layouts/partials/header.ejs
+++ b/views/layouts/partials/header.ejs
@@ -1,13 +1,17 @@
 <header id="main-nav">
-  <!-- rest of your header content -->
   <div class="nav-top">
     <span class="sitename"><a href="/">CSE Motors</a></span>
-    <div id="tools"><a href="/account/login">My Account</a></div>
+    <div id="tools">
+      <% if (locals.user) { %>
+        <a href="/account/logout">Logout</a>
+      <% } else { %>
+        <a href="/account/login">My Account</a>
+      <% } %>
+    </div>
     <button id="nav-toggle" aria-label="Toggle Navigation">&#9776;</button>
   </div>
   <%- include('navigation') %>
 
-  <%/* if (useFormsCSS) { %>
-    <link rel="stylesheet" href="/css/forms.css" />
-  <% }*/ %>
+  <!-- Keep the forms.css link included -->
+  <link rel="stylesheet" href="/css/forms.css" />
 </header>
