--- a/views/errors/500.ejs
+++ b/views/errors/500.ejs
@@ -1,5 +1,16 @@
-<div class="container">
-  <h1>500</h1>
-  <p><%= message %></p>
-  <a href="/">Return to Home</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>500 - Server Error</title>
+  <link rel="stylesheet" href="/css/errors.css" />
+</head>
+<body class="error-500">
+  <div class="container">
+    <h1>500 - Server Error</h1>
+    <p><%= message || "Sorry, something went wrong on our end." %></p>
+    <a href="/">Return to Home</a>
+  </div>
+</body>
+</html>
